--- a/public/index.ejs
+++ b/public/index.ejs
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="<%= lang %>" ng-app="app">
+<html lang="<%= lang %>" ng-app="app" data-facebook="<%= facebook %>"">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
