--- a/public/css/style.css
+++ b/public/css/style.css
@@ -942,8 +942,15 @@ a {
 }
 
 .app-element--small .app-element__body {
-  max-height: 309px;
+  height: 309px;
   overflow-x: auto;
+}
+
+.app-element__body .app-spinner {
+  margin-top: 109px;
+  width: 50px;
+  height: 50px;
+  border-width: 5px;
 }
 
 .app-element .app-table {
@@ -2948,5 +2955,17 @@ a {
   .app-game__box.selected,
   .app-game__box.is-check {
     border-width: 2px;
+  }
+
+  .app-element--small .app-element__body {
+    height: 219px;
+    overflow-x: auto;
+  }
+
+  .app-element__body .app-spinner {
+    margin-top: 79px;
+    width: 30px;
+    height: 30px;
+    border-width: 3px;
   }
 }
