fix toggle element

--- a/public/app/home/templates/home.html
+++ b/public/app/home/templates/home.html
@@ -93,7 +93,7 @@
         <span>{{ 'challenges'|translate }}</span>
         <span class="app-element__badge">{{ challenges.length }}</span>
         <div class="app-element__tools">
-            <element-toggle close="true"></element-toggle>
+            <element-toggle hide="true"></element-toggle>
         </div>
     </div>
     <div element-content class="app-element__body">
