--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1825,26 +1825,35 @@ a {
   background-image: linear-gradient(to right, #795548 50%, #F0F0B4 50%);
 }
 
-.app-game__box.last-turn,
-.app-game__box.selected,
-.app-game__box.is-check {
-  border-style: ridge solid;
-  border-width: 3px;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
+.app-game__board.app-game__board--player-white .app-game__row .app-game__box.last-turn:nth-child(1n),
+.app-game__board.app-game__board--player-black .app-game__row .app-game__box.last-turn:nth-child(1n) {
+  background-color: #C0CA33;
 }
 
-.app-game__box.last-turn {
-  border-color: #607D8B;
+.app-game__box.selected:after {
+  content: '';
+  position: absolute;
+  background-color: rgba(63, 81, 181, 0.8);
+  top: 35%;
+  left: 35%;
+  display: inline-block;
+  width: 30%;
+  z-index: 9;
+  height: 30%;
+  border-radius: 50%;
 }
 
-.app-game__box.selected {
-  border-color: #607D8B;
-}
-
-.app-game__box.is-check {
-  border-color: #FF5722;
+.app-game__box.is-check:after {
+  content: '';
+  position: absolute;
+  background-color: rgba(255, 87, 34, 0.8);
+  top: 35%;
+  left: 35%;
+  display: inline-block;
+  width: 30%;
+  z-index: 9;
+  height: 30%;
+  border-radius: 50%;
 }
 
 .app-game__box.ui-droppable:after {
