--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1830,30 +1830,21 @@ a {
   background-color: #C0CA33;
 }
 
-.app-game__box.selected:after {
-  content: '';
-  position: absolute;
-  background-color: rgba(63, 81, 181, 0.8);
-  top: 35%;
-  left: 35%;
-  display: inline-block;
-  width: 30%;
-  z-index: 9;
-  height: 30%;
-  border-radius: 50%;
+.app-game__box.selected,
+.app-game__box.is-check {
+  border-style: ridge solid;
+  border-width: 3px;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
 
-.app-game__box.is-check:after {
-  content: '';
-  position: absolute;
-  background-color: rgba(255, 87, 34, 0.8);
-  top: 35%;
-  left: 35%;
-  display: inline-block;
-  width: 30%;
-  z-index: 9;
-  height: 30%;
-  border-radius: 50%;
+.app-game__box.selected {
+  border-color: #C0CA33;
+}
+
+.app-game__box.is-check {
+  border-color: #C0CA33;
 }
 
 .app-game__box.ui-droppable:after {
