hide modal when route change success

--- a/public/app/home/templates/home.html
+++ b/public/app/home/templates/home.html
@@ -232,6 +232,7 @@
      class="app-modal app-modal__bg" 
      role="dialog" 
      aria-hidden="true"
+     data-modal
      modal-close-bg>
     <div class="app-modal__dialog">
         <div class="app-modal__content">
