--- a/public/app/components/templates/modal-create-game.html
+++ b/public/app/components/templates/modal-create-game.html
@@ -2,6 +2,7 @@
      class="app-modal app-modal__bg" 
      role="dialog" 
      aria-hidden="true"
+     data-modal
      modal-close-bg>
     <div class="app-modal__dialog">
         <div class="app-modal__head">{{ 'create_game'|translate }}</div>
