--- a/public/app/game/templates/game.html
+++ b/public/app/game/templates/game.html
@@ -303,6 +303,7 @@
          class="app-modal app-modal__bg" 
          role="dialog" 
          aria-hidden="true"
+         data-modal
          modal-close-bg>
         <div class="app-modal__dialog">
             <div class="app-modal__content">
@@ -327,7 +328,8 @@
     <div id="modal-possible-draw"
          class="app-modal app-modal__bg" 
          role="dialog" 
-         aria-hidden="true">
+         aria-hidden="true"
+         data-modal>
         <div class="app-modal__dialog">
             <div class="app-modal__content">
                 <h4 class="app-modal__title">{{ 'draw'|translate }} ?</h4>
@@ -352,7 +354,8 @@
          class="app-modal app-modal__bg" 
          role="dialog" 
          aria-hidden="true"
-         modal-close-bg>
+         modal-close-bg
+         data-modal>
         <div class="app-modal__dialog">
             <div class="app-modal__content">
                 <h4 class="app-modal__title">{{ 'offer_draw'|translate }} ?</h4>
@@ -377,7 +380,8 @@
          class="app-modal app-modal__bg" 
          role="dialog" 
          aria-hidden="true"
-         modal-close-bg>
+         modal-close-bg
+         data-modal>
         <div class="app-modal__dialog">
             <div class="app-modal__content">
                 <h4 class="app-modal__title">{{ 'resign'|translate }} ?</h4>
@@ -401,7 +405,8 @@
     <div id="modal-promotion" 
          class="app-modal app-modal__bg"
          role="dialog" 
-         aria-hidden="true">
+         aria-hidden="true"
+         data-modal>
         <div class="app-modal__dialog">
             <div class="app-modal__content">
                 <div class="app-promotion__icon"
@@ -425,6 +430,7 @@
      class="app-modal app-modal__bg"
      role="dialog" 
      aria-hidden="true"
+     data-modal
      modal-close-bg>
     <div class="app-modal__dialog app-modal__dialog--head">
         <a href modal-close class="app-modal__close">
