--- a/public/app/trophies/templates/modal-trophy.html
+++ b/public/app/trophies/templates/modal-trophy.html
@@ -2,6 +2,7 @@
      class="app-modal app-modal__bg" 
      role="dialog" 
      aria-hidden="true"
+     data-modal
      modal-close-bg>
     <div class="app-modal__dialog app-modal__dialog--head">
         <a href modal-close class="app-modal__close">
