--- a/public/index.ejs
+++ b/public/index.ejs
@@ -52,7 +52,8 @@
         <div id="modal-connect" 
              class="app-modal app-modal__bg" 
              role="dialog" 
-             aria-hidden="true">
+             aria-hidden="true"
+             data-modal>
             <div class="app-modal__content">
                 <div class="app-modal__logo">
                     <span class="app-logo">
