--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2086,7 +2086,8 @@ a {
   padding-top: 100%;
 }
 
-.app-layout.is-user-game .app-header {
+.app-layout.is-user-game .app-navigation__container,
+.app-layout.is-user-game .mdl-layout__drawer-button {
   display: none;
 }
 
@@ -2232,6 +2233,10 @@ a {
     left: 55px;
     top: 10px;
     transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .app-layout.is-user-game .app-mobile__title {
+    left: 10px;
   }
 
   .app-profile--game .app-profile__name {
