--- a/public/app/game/templates/game.html
+++ b/public/app/game/templates/game.html
@@ -1,5 +1,5 @@
 <div class="app-head app-head--game mdl-shadow--2dp mdl-cell mdl-cell--12-col">
-    <div profile-game player="player2"></div>
+    <div profile-game player="player2" last-time="game.lastTime"></div>
 </div>
 
 <div class="app-game__board app-game__board--{{ colorGame }} app-element mdl-shadow--2dp mdl-cell mdl-cell--12-col" 
@@ -23,7 +23,7 @@
 </div>
 
 <div class="app-head app-head--game mdl-shadow--2dp mdl-cell mdl-cell--12-col">
-    <div profile-game player="player1"></div>
+    <div profile-game player="player1" last-time="game.lastTime"></div>
 </div>
 
 <div class="app-game__played--phone mdl-shadow--2dp mdl-cell mdl-cell--12-col">
