--- a/public/app/game/templates/profile-game.html
+++ b/public/app/game/templates/profile-game.html
@@ -1,9 +1,11 @@
-<div class="app-profile app-profile--game element" ng-class="{'app-profile--player': isPlayerUser()}">
+<div class="app-profile app-profile--game element">
     <div class="app__pull-right">
-        <div class="app-game__time" ng-class="{'app-game__time--danger': player.time < 10000}">
+        <div class="app-game__time" 
+             ng-class="{'app-game__time--danger': isPlayerTurn(player) && player.time < 10000, 'app-game__time--turn': isPlayerTurn(player) }">
             {{ formatTime(player.time) }}
         </div>
-        <div class="app-game__time" ng-class="{'app-game__time--danger': player.timeTurn < 10000}">
+        <div class="app-game__time" 
+             ng-class="{'app-game__time--danger': isPlayerTurn(player) && player.timeTurn < 10000, 'app-game__time--turn': isPlayerTurn(player)}">
             {{ formatTime(player.timeTurn) }}
         </div>
     </div>
