--- a/public/app/components/templates/modal-create-game.html
+++ b/public/app/components/templates/modal-create-game.html
@@ -20,21 +20,23 @@
                     </select>
                     <label for="create-game-color">{{ 'color'|translate }}</label>
                 </div>
-                <div class="app-form__select">
-                    <div class="app-form__select-grid mdl-grid">
+                <div class="app-form__select-grid mdl-grid">
+                    <div class="app-form__select mdl-cell--6-col">
                         <select ng-model="game.pointsMin"
                                 ng-options="value as value for (key, value) in paramsGame.pointsMin" 
-                                id="create-game-points" 
-                                class="mdl-cell--6-col">
-                            <option value="">{{ 'min'|translate }}</option>
+                                id="create-game-points-min">
+                            <option value="">∞</option>
                         </select>
+                        <label for="create-game-points-min">{{ 'min'|translate }}</label>
+                    </div>
+                    <div class="app-form__select mdl-cell--6-col">
                         <select ng-model="game.pointsMax"
                                 ng-options="value as value for (key, value) in paramsGame.pointsMax"
-                                class="mdl-cell--6-col">
-                            <option value="">{{ 'max'|translate }}</option>
+                                id="create-game-points-max">
+                            <option value="">∞</option>
                         </select>
+                        <label for="create-game-points-max">{{ 'max'|translate }}</label>
                     </div>
-                    <label for="create-game-points">{{ 'points'|translate }}</label>
                 </div>
                 <div class="app-modal__actions">
                     <button modal-close type="button" class="mdl-button mdl-button--raised">{{ 'cancel'|translate }}</button>
