--- a/public/app/home/templates/home.html
+++ b/public/app/home/templates/home.html
@@ -53,7 +53,7 @@
                     <th></th>
                     <th sortable collection="createdGames" expression="['points', 'time', 'color']" icon="star"></th>
                     <th sortable collection="createdGames" expression="['color', 'points', 'time']" icon="invert_colors"></th>
-                    <th sortable collection="createdGames" expression="['time', 'points', 'color']" icon="watch_later"></th>
+                    <th sortable collection="createdGames" expression="['time', 'points', 'color']" icon="schedule"></th>
                     <th></th>
                 </tr>
             </thead>
@@ -104,7 +104,7 @@
                     <th></th>
                     <th sortable collection="challenges" expression="['points', 'time', 'color']" icon="star"></th>
                     <th sortable collection="challenges" expression="['color', 'points', 'time']" icon="invert_colors"></th>
-                    <th sortable collection="challenges" expression="['time', 'points', 'color']" icon="watch_later"></th>
+                    <th sortable collection="challenges" expression="['time', 'points', 'color']" icon="schedule"></th>
                     <th></th>
                 </tr>
             </thead>
