--- a/public/app/components/templates/modal-create-game.html
+++ b/public/app/components/templates/modal-create-game.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="app-modal__actions">
                     <button modal-close type="button" class="mdl-button mdl-button--raised">{{ 'cancel'|translate }}</button>
-                    <button type="submit" class="mdl-button mdl-button--raised mdl-button--colored">{{ 'ok'|translate }}</button>
+                    <button type="submit" class="mdl-button mdl-button--raised mdl-button--colored">{{ 'create_game'|translate }}</button>
                 </div>
             </form>
             <div class="app-search__game" ng-show="loadGame">
