--- a/public/app/components/templates/modal-profile.html
+++ b/public/app/components/templates/modal-profile.html
@@ -14,7 +14,7 @@
                     <img class="app-profile__avatar" ng-src="{{ data.avatar }}">
                 </div>
                 <div class="app-profile__name">
-                    <a class="app-profile__name" href>{{ data.name }}</a>
+                    <a class="app-profile__name">{{ data.name }}</a>
                 </div>
                 <div class="app-profile__info app-profile__info--blitz" title="{{ 'blitz'|translate }}">
                     <i class="app-icon material-icons">flash_on</i>
