--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1263,9 +1263,8 @@ a {
 }
 
 .app-trophy--page .app-trophy__picture img {
-  width: 72px;
-  height: 72px;
-  padding: 12px;
+  width: 100%;
+  height: 100%;
 }
 
 .app-trophy--page .app-trophy__progress-value {
@@ -1298,7 +1297,7 @@ a {
 .app-trophy--modal .app-trophy__picture {
   display: inline-block;
   float: none;
-  margin-bottom: 18px;
+  margin-bottom: 16px;
   width: 200px;
   height: 200px;
 }
@@ -1306,12 +1305,12 @@ a {
 .app-trophy--modal .app-trophy__picture img {
   width: 164px;
   height: 164px;
-  padding: 18px;
+  padding: 16px;
 }
 
 .app-trophy--modal .app-trophy__progress-bar {
   display:  block;
-  padding: 18px;
+  padding: 16px;
 }
 
 .app-trophy--modal .app-trophy__progress-value {
