--- a/public/app/home/templates/home.html
+++ b/public/app/home/templates/home.html
@@ -38,13 +38,7 @@
 </div>
 
 <div element class="app-element app-element--small mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
-    <div class="app-element__head">
-        <span>{{ 'games'|translate }}</span>
-        <span class="app-element__badge">{{ createdGames.length || 0 }}</span>
-        <div class="app-element__tools">
-            <element-toggle></element-toggle>
-        </div>
-    </div>
+    <element-toggle name="'games'" collection="createdGames"></element-toggle>
     <div element-content class="app-element__body">
         <table ng-show="createdGames.length"
                class="app-table mdl-data-table mdl-js-data-table">
@@ -87,15 +81,8 @@
     </div>
 </div>
 
-<div element 
-     class="app-element app-element--small mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
-    <div class="app-element__head">
-        <span>{{ 'challenges'|translate }}</span>
-        <span class="app-element__badge">{{ challenges.length }}</span>
-        <div class="app-element__tools">
-            <element-toggle hide="true"></element-toggle>
-        </div>
-    </div>
+<div element class="app-element app-element--small mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
+    <element-toggle name="'challenges'" collection="challenges" hide="true"></element-toggle>
     <div element-content class="app-element__body">
         <table ng-if="challenges.length"
                class="app-table mdl-data-table mdl-js-data-table">
@@ -135,13 +122,7 @@
 </div>
 
 <div element class="app-element app-element--small mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
-    <div class="app-element__head">
-        <span>{{ 'challengers'|translate }}</span>
-        <span class="app-element__badge">{{ challengers.length || 0 }}</span>
-        <div class="app-element__tools">
-            <element-toggle></element-toggle>
-        </div>
-    </div>
+    <element-toggle name="'challengers'" collection="challengers"></element-toggle>
     <div element-content class="app-element__body">
         <table ng-show="challengers.length"
                class="app-table mdl-data-table mdl-js-data-table">
@@ -185,13 +166,7 @@
 <div element 
      ng-if="friends.length"
      class="app-element app-element--small mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
-    <div class="app-element__head">
-        <span>{{ 'friends'|translate }}</span>
-        <span class="app-element__badge">{{ friends.length }}</span>
-        <div class="app-element__tools">
-            <element-toggle></element-toggle>
-        </div>
-    </div>
+    <element-toggle name="'friends'" collection="friends"></element-toggle>
     <div element-content class="app-element__body">
         <table class="app-table mdl-data-table mdl-js-data-table">
             <thead>
