--- a/public/index.ejs
+++ b/public/index.ejs
@@ -6,7 +6,7 @@
         <meta name="description" content="<%= description %>">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
-        <meta property="og:url" content="https://worldofchess.online"/>
+        <meta property="og:url" content="https://worldofchess.online/<%= lang %>"/>
         <meta property="og:title" content="<%= title %>" />
         <meta property="og:description" content="<%= description %>" />
         <meta property="og:image" content="https://worldofchess.online/images/logo.png" />
