--- a/public/css/style-ar.css
+++ b/public/css/style-ar.css
@@ -27,6 +27,10 @@
   float: left;
 }
 
+.app-element .app-element__badge {
+  position: initial;
+}
+
 .app-pagination__content {
   text-align: left;
 }
